Switch to raspian as base image